--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title class="lang lang-en">Portfolio - Dinh Nguyen Cam Tu </title>
+  <title class="lang lang-en">Website-group11a4 </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
